--- a/layout.html
+++ b/layout.html
@@ -4,7 +4,7 @@
 			As you read a book word by word and page by page, you participate in its creation, just as a cellist playing a Bach suite participates, note by note, in the creation, the coming-to-be, the existence, of the music. And, as you read and re-read, the book of course participates in the creation of you, your thoughts and feelings, the size and temper of your soul.
 		</blockquote>
 		<figcaption>
-			Ursula K. Le Guin
+			Here you see an Example how to use the API in order to style your README Page
 		</figcaption>
 	</figure>
 </article>
