--- a/layout.html
+++ b/layout.html
@@ -31,7 +31,7 @@ body {
   position: relative;
   margin: auto;
   padding: 29px 20px 20px 45px;
-  width: 280px;
+  width: 100%;
   line-height: 30px;
   color: #6a5f49;
   text-shadow: 0 1px 1px white;
