--- a/layout.html
+++ b/layout.html
@@ -24,14 +24,13 @@
 body {
   font: 12px/20px "Lucida Grande", Tahoma, Verdana, sans-serif;
   color: #404040;
-  background: #dce1e1;
 }
 
 .notepaper {
   position: relative;
   margin: auto;
   padding: 29px 20px 20px 45px;
-  width: 100%;
+  width: 300px;
   line-height: 30px;
   color: #6a5f49;
   text-shadow: 0 1px 1px white;
