--- a/layout.html
+++ b/layout.html
@@ -1,25 +1,27 @@
 <div class="notepaper">
   <figure class="quote">
     <blockquote class="curly-quotes" cite="https://www.youtube.com/watch?v=qYLrc9hy0t0">
-      The same wind blows on us all.
-      The difference in arrival is not
-      the blowing of the wind,
-      but the set of the sail.
+      This is some example how to use the GitProfile Render API in order to bring CSS into README Pages :D
     </blockquote>
     <figcaption class="quote-by">— Jim Rohn</figcaption>
   </figure>
 </div>
 
-
 <style>
 /*
  * Copyright (c) 2012-2013 Thibaut Courouble
- * http://www.cssflow.com
- * Licensed under the MIT License
+ * http://www.webinterfacelab.com
  *
- * Sass/SCSS source: https://goo.gl/8hncj
- * PSD by Liam McCabe: https://goo.gl/md3Dj
+ * Licensed under the MIT License:
+ * https://www.opensource.org/licenses/mit-license.php
+ *
+ * View the Sass/SCSS source at:
+ * http://demo.webinterfacelab.com/28-notepaper/scss/
+ *
+ * Original PSD by Liam McCabe: https://goo.gl/md3Dj
  */
+
+@import "https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css";
 
 body {
   font: 12px/20px "Lucida Grande", Tahoma, Verdana, sans-serif;
@@ -30,10 +32,14 @@ body {
   position: relative;
   margin: auto;
   padding: 29px 20px 20px 45px;
-  width: 300px;
+  width: 280px;
   line-height: 30px;
   color: #6a5f49;
   text-shadow: 0 1px 1px white;
+  background-color: #f2f6c1;
+  background-image: -webkit-radial-gradient(center, cover, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0.1) 90%), -webkit-repeating-linear-gradient(top, transparent 0%, transparent 29px, rgba(239, 207, 173, 0.7) 29px, rgba(239, 207, 173, 0.7) 30px);
+  background-image: -moz-radial-gradient(center, cover, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0.1) 90%), -moz-repeating-linear-gradient(top, transparent 0%, transparent 29px, rgba(239, 207, 173, 0.7) 29px, rgba(239, 207, 173, 0.7) 30px);
+  background-image: -o-radial-gradient(center, cover, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0.1) 90%), -o-repeating-linear-gradient(top, transparent 0%, transparent 29px, rgba(239, 207, 173, 0.7) 29px, rgba(239, 207, 173, 0.7) 30px);
   border: 1px solid #c3baaa;
   border-color: rgba(195, 186, 170, 0.9);
   -webkit-box-sizing: border-box;
