--- a/layout.html
+++ b/layout.html
@@ -49,19 +49,11 @@ body {
   box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), inset 0 0 5px #d8e071, 0 0 1px rgba(0, 0, 0, 0.1), 0 2px rgba(0, 0, 0, 0.02);
 }
 
-.notepaper:before, .notepaper:after {
+.notepaper:after {
   content: '';
   position: absolute;
   top: 0;
   bottom: 0;
-}
-
-.notepaper:before {
-  left: 28px;
-  width: 2px;
-  border: solid #efcfad;
-  border-color: rgba(239, 207, 173, 0.9);
-  border-width: 0 1px;
 }
 
 .notepaper:after {
