--- a/layout.html
+++ b/layout.html
@@ -3,7 +3,7 @@
     <blockquote class="curly-quotes" cite="https://www.youtube.com/watch?v=qYLrc9hy0t0">
       This is some example how to use the GitProfile Render API in order to bring CSS into README Pages :D
     </blockquote>
-    <figcaption class="quote-by">— Jim Rohn</figcaption>
+    <figcaption class="quote-by">GitProfile</figcaption>
   </figure>
 </div>
 
