--- a/layout.html
+++ b/layout.html
@@ -1,110 +1,65 @@
-<div class="notepaper">
-  <figure class="quote">
-    <blockquote class="curly-quotes" cite="https://www.youtube.com/watch?v=qYLrc9hy0t0">
-      This is some example how to use the GitProfile Render API in order to bring CSS into README Pages :D
-    </blockquote>
-    <figcaption class="quote-by">GitProfile</figcaption>
-  </figure>
-</div>
+<link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
+
+<ul>
+    <li>
+        <a href="#">
+            <h2>Note1</h2>
+            <p>Here is a Notice</p>
+        </a>
+    </li>
+    <li>
+        <a href="#">
+            <h2>You See?</h2>
+            <p>You can build little Components</p>
+        </a>
+    </li>
+    <li>
+        <a href="#">
+            <h2>YIPPIE</h2>
+            <p>You even can build whole areas in README.md</p>
+        </a>
+    </li>
+  </ul>
 
 <style>
-/*
- * Copyright (c) 2012-2013 Thibaut Courouble
- * http://www.webinterfacelab.com
- *
- * Licensed under the MIT License:
- * https://www.opensource.org/licenses/mit-license.php
- *
- * View the Sass/SCSS source at:
- * http://demo.webinterfacelab.com/28-notepaper/scss/
- *
- * Original PSD by Liam McCabe: https://goo.gl/md3Dj
- */
-
-@import "https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css";
 
 body {
-  font: 12px/20px "Lucida Grande", Tahoma, Verdana, sans-serif;
-  color: #404040;
+  margin: 20px auto;
+  font-family: 'Lato';
+  color:#fff;
+}
+*{
+  margin:0;
+  padding:0;
+}
+h2 {
+  font-weight: bold;
+  font-size: 2rem;
+}
+p {
+  font-family: 'Reenie Beanie';
+  font-size: 1.5rem;
+}
+ul,li{
+  list-style:none;
+}
+ul{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+ul li a{
+  text-decoration:none;
+  color:#000;
+  background:#ffc;
+  display:block;
+  height:10em;
+  width:10em;
+  padding:1em;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+ul li{
+  margin:1em;
 }
 
-.notepaper {
-  position: relative;
-  margin: auto;
-  padding: 29px 20px 20px 45px;
-  width: 280px;
-  line-height: 30px;
-  color: #6a5f49;
-  text-shadow: 0 1px 1px white;
-  background-color: #f2f6c1;
-  background-image: -webkit-radial-gradient(center, cover, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0.1) 90%), -webkit-repeating-linear-gradient(top, transparent 0%, transparent 29px, rgba(239, 207, 173, 0.7) 29px, rgba(239, 207, 173, 0.7) 30px);
-  background-image: -moz-radial-gradient(center, cover, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0.1) 90%), -moz-repeating-linear-gradient(top, transparent 0%, transparent 29px, rgba(239, 207, 173, 0.7) 29px, rgba(239, 207, 173, 0.7) 30px);
-  background-image: -o-radial-gradient(center, cover, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0.1) 90%), -o-repeating-linear-gradient(top, transparent 0%, transparent 29px, rgba(239, 207, 173, 0.7) 29px, rgba(239, 207, 173, 0.7) 30px);
-  border: 1px solid #c3baaa;
-  border-color: rgba(195, 186, 170, 0.9);
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), inset 0 0 5px #d8e071, 0 0 1px rgba(0, 0, 0, 0.1), 0 2px rgba(0, 0, 0, 0.02);
-  box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), inset 0 0 5px #d8e071, 0 0 1px rgba(0, 0, 0, 0.1), 0 2px rgba(0, 0, 0, 0.02);
-}
-
-.notepaper:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  bottom: 0;
-}
-
-.notepaper:after {
-  z-index: -1;
-  left: 0;
-  right: 0;
-  background: rgba(242, 246, 193, 0.9);
-  border: 1px solid rgba(170, 157, 134, 0.7);
-  -webkit-transform: rotate(2deg);
-  -moz-transform: rotate(2deg);
-  -ms-transform: rotate(2deg);
-  -o-transform: rotate(2deg);
-  transform: rotate(2deg);
-}
-
-.quote {
-  font-family: Georgia, serif;
-  font-size: 14px;
-}
-
-.curly-quotes:before, .curly-quotes:after {
-  display: inline-block;
-  vertical-align: top;
-  height: 30px;
-  line-height: 48px;
-  font-size: 50px;
-  opacity: .2;
-}
-
-.curly-quotes:before {
-  content: '\201C';
-  margin-right: 4px;
-  margin-left: -8px;
-}
-
-.curly-quotes:after {
-  content: '\201D';
-  margin-left: 4px;
-  margin-right: -8px;
-}
-
-.quote-by {
-  display: block;
-  padding-right: 10px;
-  text-align: right;
-  font-size: 13px;
-  font-style: italic;
-  color: #84775c;
-}
-
-.lt-ie8 .notepaper {
-  padding: 15px 25px;
-}
 </style>
