--- a/debug/client.html
+++ b/debug/client.html
@@ -1,3 +1,3 @@
 <body style="background: blue;">
-<img src="http://localhost:3000?username=Muvels&repo=GitProfile"/>
+<img src="https://gitprofilerender.vercel.app/?username=Muvels&repo=GitProfile"/>
 </body>
